--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "author": "Markus A. Wolf",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@tailwindcss/ui": "^0.4.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
