--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
         "minor": "npm version minor",
         "major": "npm version major"
     },
-    "author": "Markus A. Wolf",
-    "contributors": [
-        "Markus A. Wolf <wolf.markus.anton@gmail.com>"
-    ],
+    "author": {
+        "name": "Markus A. Wolf",
+        "email": "hello@markusantonwolf.com",
+        "url": "https://www.markusantonwolf.com/en/"
+    },
+    "homepage": "https://github.com/markusantonwolf/ta-youtube#readme",
+    "bugs": {
+        "url": "https://github.com/markusantonwolf/ta-youtube/issues"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/markusantonwolf/ta-youtube.git"
@@ -24,14 +29,19 @@
         "tailwindcss",
         "css",
         "tailwind",
-        "filters",
-        "backdrop",
-        "blur"
+        "youtube",
+        "alpinejs",
+        "alpine",
+        "privacy",
+        "tailwindcss-plugin"
     ],
     "license": "MIT",
     "dependencies": {
         "lodash": "^4.17.20",
         "change-case": "^4.1.2"
+    },
+    "peerDependencies": {
+        "tailwindcss": "^1.8.3 || ^2.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.11.6",
