--- a/package.json
+++ b/package.json
@@ -39,25 +39,25 @@
     ],
     "license": "MIT",
     "dependencies": {
-        "lodash": "^4.17.20",
-        "change-case": "^4.1.2"
+        "change-case": "^4.1.2",
+        "lodash": "^4.17.21"
     },
     "peerDependencies": {
         "tailwindcss": "^1.8.3 || ^2.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.11.6",
-        "@babel/preset-env": "^7.11.5",
-        "@fullhuman/postcss-purgecss": "^3.1.0",
-        "alpinejs": "^2.7.0",
+        "@babel/core": "^7.13.15",
+        "@babel/preset-env": "^7.13.15",
+        "@fullhuman/postcss-purgecss": "^3.1.3",
+        "alpinejs": "^2.8.2",
         "autoprefixer": "^9.8.6",
-        "config": "^3.3.2",
-        "cssnano": "^4.1.10",
+        "config": "^3.3.6",
+        "cssnano": "^4.1.11",
         "gulp": "^4.0.2",
         "gulp-babel": "^8.0.0",
         "gulp-clean": "^0.4.0",
         "gulp-concat": "^2.6.1",
-        "gulp-file-include": "^2.2.2",
+        "gulp-file-include": "^2.3.0",
         "gulp-live-server": "0.0.31",
         "gulp-minify": "^3.1.0",
         "gulp-postcss": "^9.0.0",
