--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
         "change-case": "^4.1.2",
         "lodash": "^4.17.21"
     },
-    "peerDependencies": {
-        "tailwindcss": "^1.8.3 || ^2.0.0"
-    },
+    "peerDependencies": {},
     "devDependencies": {
         "@babel/core": "^7.14.6",
         "@babel/preset-env": "^7.14.5",
